docker container debugging config for vscode added

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,26 @@
             "cwd": "${workspaceFolder}",
             "args": [
                 "-DockerId",
-                "denizetkar",
+                "denizetkar"
             ]
+        },
+        {
+            "name": "Docker: Edge - Forecaster",
+            "type": "docker",
+            "request": "launch",
+            "preLaunchTask": "docker-run: debug-edge-forecaster",
+            "python": {
+                "pathMappings": [
+                    {
+                        "localRoot": "${workspaceFolder}/docker-apps/edge/forecaster/app",
+                        "remoteRoot": "/app"
+                    }
+                ],
+                "projectType": "general",
+                "justMyCode": false,
+            },
+            "containerName": "forecaster",
+            "removeContainerAfterDebug": true,
         }
     ]
 }
