fixed vscode docker debug config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
                 "projectType": "general",
                 "justMyCode": false,
             },
-            "containerName": "forecaster",
+            "containerName": "forecaster-debug",
             "removeContainerAfterDebug": true,
         }
     ]
