latest settings file

--- a/docker-apps/edge/forecaster/app/forecaster-configuration/settings.json
+++ b/docker-apps/edge/forecaster/app/forecaster-configuration/settings.json
@@ -5,20 +5,29 @@
     "minio_access_key" : "...",
     "minio_secret_key" : "..."
   },
+  "message_broker_settings": {
+    "message_broker_topic_name": "EDGE_FORECAST",
+    "message_broker_host": "localhost",
+    "message_broker_port": 29092
+  },
+  "iot_platform_mqtt_settings": {
+    "iot_platform_gateway_username" : "JWT",
+    "iot_platform_gateway_ip" : "131.159.35.132",
+    "iot_platform_gateway_port" : 1883,
+    "iot_platform_group_name" : "group4_2021_ss",
+    "iot_platform_user_id" : 48,
+    "iot_platform_device_id" : 135,
+    "iot_platform_gateway_password": ""
+  },
   "forecast_models": [
     {
-      "type": "lr",
-      "model_bucket": "test-model",
-      "model_blob_name": "lr_model.pk",
-      "iot_platform_mqtt_settings": {
-        "iot_platform_gateway_username" : "JWT",
-        "iot_platform_gateway_ip" : "131.159.35.132",
-        "iot_platform_gateway_port" : 1883,
-        "iot_platform_group_name" : "group4_2021_ss",
-        "iot_platform_sensor_name" : "forecast",
-        "iot_platform_user_id" : 48,
-        "iot_platform_device_id" : 135,
-        "iot_platform_gateway_password": "ey..."
+      "type": "lstm",
+      "model_bucket": "production-model",
+      "model_blob_name": "lstm_model.pk",
+      "iot_platform_consumer_settings": {
+        "iot_platform_consumer_host" : "131.159.35.132",
+        "iot_platform_consumer_id" : 1253,
+        "iot_platform_consumer_key" : ""
       }
     }
   ]
