added an interpreter for all script files; simplified file structure of edge forecaster without affectingthe Dockerfile

--- a/docker-apps/edge/forecaster/Dockerfile
+++ b/docker-apps/edge/forecaster/Dockerfile
@@ -3,9 +3,9 @@ FROM ibmfunctions/action-python-v3.7:master
 ARG docker_app_path="docker-apps/edge/forecaster"
 ARG container_app_path="/app"
 
-# Install app specific requirements
-WORKDIR ${container_app_path}/requirements
-COPY ${docker_app_path}/requirements .
+# Copy code and install app specific requirements
+WORKDIR ${container_app_path}
+COPY ${docker_app_path}/app .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy and install common requirements
@@ -13,7 +13,4 @@ WORKDIR ${container_app_path}/common
 COPY common/ .
 RUN bash install-all.sh
 
-# Copy code
 WORKDIR ${container_app_path}
-COPY ${docker_app_path}/app .
-
