--- a/docker-compose-edge.integration-test.yml
+++ b/docker-compose-edge.integration-test.yml
@@ -7,7 +7,7 @@ services:
     container_name: minio
     command: server /export
     environment:
-      MINIO_ROOT_USER: "test_user"
+      MINIO_ROOT_USER: "user"
       MINIO_ROOT_PASSWORD: "password"
     volumes:
       - ./mnt/data:/data
