Dockerfile arguments have the same letter case as the corresponding docker yaml arguments (both upper case)

--- a/docker-apps/edge/forecaster/Dockerfile
+++ b/docker-apps/edge/forecaster/Dockerfile
@@ -1,22 +1,22 @@
 FROM python:3.7.10-slim-buster
 
-ARG docker_app_path="docker-apps/edge/forecaster"
-ARG container_app_path="/app"
+ARG DOCKER_APP_PATH="docker-apps/edge/forecaster"
+ARG CONTAINER_APP_PATH="/app"
 
 # Copy code and install app specific requirements
-WORKDIR ${container_app_path}
-COPY ${docker_app_path}/app .
+WORKDIR ${CONTAINER_APP_PATH}
+COPY ${DOCKER_APP_PATH}/app .
 RUN apt-get update \
         # Upgrade installed packages to get latest security fixes if the base image does not contain them already.
         && apt-get upgrade -y --no-install-recommends \
         # add some packages required for the pip install
         && apt-get install -y --no-install-recommends \
-           gcc \
-           libc-dev \
-           libxslt-dev \
-           libxml2-dev \
-           libffi-dev \
-           libssl-dev \
+        gcc \
+        libc-dev \
+        libxslt-dev \
+        libxml2-dev \
+        libffi-dev \
+        libssl-dev \
         # cleanup package lists, they are not used anymore in this image
         && rm -rf /var/lib/apt/lists/* \
         && apt-cache search linux-headers-generic \
@@ -24,8 +24,8 @@ RUN apt-get update \
         && pip install --no-cache-dir -r requirements.txt
 
 # Copy and install common requirements
-WORKDIR ${container_app_path}/common
+WORKDIR ${CONTAINER_APP_PATH}/common
 COPY common/ .
 RUN bash install-all.sh
 
-WORKDIR ${container_app_path}
+WORKDIR ${CONTAINER_APP_PATH}
