added docker compose for minio and edge app log is real-time with 'PYTHONUNBUFFERED' env variable

--- a/docker-compose-edge.yml
+++ b/docker-compose-edge.yml
@@ -30,6 +30,8 @@ services:
     command: python main.py --settings-file edge-configuration/settings.json
     volumes:
       - "./edge-configuration:${CONTAINER_APP_PATH}/edge-configuration"
+    environment:
+      PYTHONUNBUFFERED: 1
     depends_on:
       - minio
       - mosquitto
