--- a/docker-apps/edge/forecaster/app/edge-configuration/settings.json
+++ b/docker-apps/edge/forecaster/app/edge-configuration/settings.json
@@ -41,5 +41,10 @@
       "model_blob_name": "sarimax_model.pk"
     }
   ],
-  "forecast_combine_strategy": "select_most_accurate"
+  "forecast_combine_strategy": "select_most_accurate",
+  "anomaly_detector_settings": {
+    "model_bucket": "production-model",
+    "model_blob_name": "anomaly.isolation_forest",
+    "detection_period": 86400
+  }
 }
