added FaaS trainer app for anomaly detection model; anomaly trainer not only saves model but also the data scaler; changed host names of minio and broker in the edge settings; changed model buckets names from 'test-model' to 'production-model'

--- a/docker-apps/edge/forecaster/app/edge-configuration/settings.json
+++ b/docker-apps/edge/forecaster/app/edge-configuration/settings.json
@@ -1,13 +1,13 @@
 {
   "minio_settings": {
-    "minio_host": "localhost",
+    "minio_host": "minio",
     "minio_port": 9000,
     "minio_access_key": "group4",
     "minio_secret_key": ""
   },
   "edge_broker_mqtt_settings": {
     "edge_broker_topic_name": "EDGE_FORECAST",
-    "edge_broker_host": "localhost",
+    "edge_broker_host": "mosquitto",
     "edge_broker_port": 1883
   },
   "iot_platform_mqtt_settings": {
