--- a/requirements.txt
+++ b/requirements.txt
@@ -36,30 +36,31 @@ cliff==3.8.0
     # via optuna
 cmaes==0.8.2
     # via optuna
-cmd2==2.1.0
+cmd2==2.1.2
     # via cliff
 colorama==0.4.4
     # via
     #   click
     #   cmd2
     #   colorlog
+    #   tqdm
 colorlog==5.0.1
     # via optuna
 cycler==0.10.0
     # via matplotlib
-fsspec[http]==2021.5.0
+fsspec[http]==2021.6.1
     # via pytorch-lightning
 future==0.18.2
     # via pytorch-lightning
 google-auth-oauthlib==0.4.4
     # via tensorboard
-google-auth==1.31.0
+google-auth==1.32.1
     # via
     #   google-auth-oauthlib
     #   tensorboard
 greenlet==1.1.0
     # via sqlalchemy
-grpcio==1.38.0
+grpcio==1.38.1
     # via tensorboard
 idna==2.10
     # via
@@ -85,7 +86,7 @@ multidict==5.1.0
     #   yarl
 mypy-extensions==0.4.3
     # via black
-numpy==1.20.3
+numpy==1.21.0
     # via
     #   -r requirements.in
     #   cmaes
@@ -98,18 +99,19 @@ numpy==1.20.3
     #   scipy
     #   statsmodels
     #   tensorboard
+    #   torchmetrics
 oauthlib==3.1.1
     # via requests-oauthlib
 optuna==2.8.0
     # via -r requirements.in
-packaging==20.9
+packaging==21.0
     # via
     #   optuna
     #   pytorch-lightning
     #   torchmetrics
 paho-mqtt==1.5.1
     # via -r requirements.in
-pandas==1.2.4
+pandas==1.3.0
     # via
     #   -r requirements.in
     #   statsmodels
@@ -121,8 +123,10 @@ pbr==5.6.0
     # via
     #   cliff
     #   stevedore
-pillow==8.2.0
-    # via matplotlib
+pillow==8.3.1
+    # via
+    #   matplotlib
+    #   pytorch-lightning
 prettytable==2.1.0
     # via cliff
 protobuf==3.17.3
@@ -151,7 +155,7 @@ python-dateutil==2.8.1
     #   pandas
 python-editor==1.0.4
     # via alembic
-pytorch-lightning==1.3.5
+pytorch-lightning==1.3.8
     # via -r requirements.in
 pytz==2021.1
     # via pandas
@@ -159,7 +163,7 @@ pyyaml==5.4.1
     # via
     #   cliff
     #   pytorch-lightning
-regex==2021.4.4
+regex==2021.7.6
     # via black
 requests-oauthlib==1.3.0
     # via google-auth-oauthlib
@@ -172,7 +176,7 @@ rsa==4.7.2
     # via google-auth
 scikit-learn==0.24.2
     # via sklearn
-scipy==1.6.3
+scipy==1.7.0
     # via
     #   -r requirements.in
     #   optuna
@@ -190,7 +194,7 @@ six==1.16.0
     #   tensorboard
 sklearn==0.0
     # via -r requirements.in
-sqlalchemy==1.4.18
+sqlalchemy==1.4.20
     # via
     #   alembic
     #   optuna
@@ -211,9 +215,9 @@ torch==1.9.0
     #   -r requirements.in
     #   pytorch-lightning
     #   torchmetrics
-torchmetrics==0.3.2
+torchmetrics==0.4.1
     # via pytorch-lightning
-tqdm==4.61.1
+tqdm==4.61.2
     # via
     #   optuna
     #   pytorch-lightning
@@ -221,7 +225,7 @@ typing-extensions==3.10.0.0
     # via
     #   aiohttp
     #   torch
-urllib3==1.26.5
+urllib3==1.26.6
     # via
     #   minio
     #   requests
