--- a/docker-compose-edge.yml
+++ b/docker-compose-edge.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
 
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2021-06-17T00-10-46Z
     hostname: minio
     container_name: minio
     command: server /export
